--- a/view/twig/game21.html.twig
+++ b/view/twig/game21.html.twig
@@ -1,4 +1,3 @@
-
 <form method="POST" action="{{ testinUrl }}">
     <label for="howManyDices">How many dices?<br></label>
     <input name="howManyDices" type="number" min="1" max="2" value="{{ howManyDices }}">
@@ -6,9 +5,10 @@
     <input name="howManySides" type="number" min="1" value="{{ howManySides }}">
     <br>
     <input type="submit" name="action" value="start">
-    <input type="submit" name="action" value="restart">
     <input type="submit" name="action" value="roll">
-    <input type="submit" name="action" value="computer">
+    {% if test == 0 %}
+        <input type="submit" name="action" value="computer">
+    {% endif %}
     <input type="submit" name="action" value="end">
 </form>
 
